WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116720
[BlackBerry] Fix bad type warning in InputHandler log.
https://bugs.webkit.org/show_bug.cgi?id=116720
Summary
[BlackBerry] Fix bad type warning in InputHandler log.
Mike Fenton
Reported
2013-05-24 06:54:26 PDT
SSIA.
Attachments
Patch
(2.06 KB, patch)
2013-05-24 06:57 PDT
,
Mike Fenton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mike Fenton
Comment 1
2013-05-24 06:57:04 PDT
Created
attachment 202814
[details]
Patch
WebKit Commit Bot
Comment 2
2013-05-24 08:50:57 PDT
Comment on
attachment 202814
[details]
Patch Clearing flags on attachment: 202814 Committed
r150641
: <
http://trac.webkit.org/changeset/150641
>
WebKit Commit Bot
Comment 3
2013-05-24 08:50:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug