[BlackBerry] Fix bad type warning in InputHandler log. https://bugs.webkit.org/show_bug.cgi?id=116720

Reviewed by Carlos Garcia Campos.

Fix warning in inputLog string.

* WebKitSupport/InputHandler.cpp:
(BlackBerry::WebKit::InputHandler::handleKeyboardInput):


Canonical link: https://commits.webkit.org/135021@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150641 268f45cc-cd09-0410-ab3c-d52691b4dbfc